[package]
name = "myopic"
version = "0.1.0"
authors = ["nsmryan <nsmryan@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/nsmryan/myopic"
keywords = ["fp", "lens"]
readme = "README.md"
description = "A possibly bad lens library for Rust"

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
